azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachines_kalivm_01_name": {
            "defaultValue": "kalivm-01",
            "type": "String"
        },
        "virtualMachines_ubuntuvm_01_name": {
            "defaultValue": "ubuntuvm-01",
            "type": "String"
        },
        "virtualMachines_windowsvm_01_name": {
            "defaultValue": "windowsvm-01",
            "type": "String"
        },
        "networkInterfaces_kalivm_01321_name": {
            "defaultValue": "kalivm-01321",
            "type": "String"
        },
        "publicIPAddresses_kalivm_01_ip_name": {
            "defaultValue": "kalivm-01-ip",
            "type": "String"
        },
        "networkInterfaces_ubuntuvm_01480_name": {
            "defaultValue": "ubuntuvm-01480",
            "type": "String"
        },
        "publicIPAddresses_ubuntuvm_01_ip_name": {
            "defaultValue": "ubuntuvm-01-ip",
            "type": "String"
        },
        "virtualNetworks_inacap_rg01_vnet_name": {
            "defaultValue": "inacap-rg01-vnet",
            "type": "String"
        },
        "networkInterfaces_windowsvm_01937_name": {
            "defaultValue": "windowsvm-01937",
            "type": "String"
        },
        "networkSecurityGroups_kalivm_01_nsg_name": {
            "defaultValue": "kalivm-01-nsg",
            "type": "String"
        },
        "networkSecurityGroups_ubuntuvm_01_nsg_name": {
            "defaultValue": "ubuntuvm-01-nsg",
            "type": "String"
        },
        "networkSecurityGroups_windowsvm_01_nsg_name": {
            "defaultValue": "windowsvm-01-nsg",
            "type": "String"
        },
        "subnets_default_name": {
            "defaultValue": "default",
            "type": "String"
        },
        "securityRules_SSH_name": {
            "defaultValue": "SSH",
            "type": "String"
        },
        "securityRules_RDP_name": {
            "defaultValue": "RDP",
            "type": "String"
        },
        "securityRules_SSH_name_1": {
            "defaultValue": "SSH",
            "type": "String"
        },
        "securityRules_RDP_name_1": {
            "defaultValue": "RDP",
            "type": "String"
        },
        "virtualMachines_kalivm_01_id": {
            "defaultValue": "/subscriptions/979226a0-fd4a-4f1b-9bc5-46d431e71647/resourceGroups/inacap-rg01/providers/Microsoft.Compute/disks/kalivm-01_OsDisk_1_2fd0c4369fff43af90432ad3bd19136f",
            "type": "String"
        },
        "virtualMachines_ubuntuvm_01_id": {
            "defaultValue": "/subscriptions/979226a0-fd4a-4f1b-9bc5-46d431e71647/resourceGroups/inacap-rg01/providers/Microsoft.Compute/disks/ubuntuvm-01_OsDisk_1_a34c6adb17ce48248649e91cfcddb7d5",
            "type": "String"
        },
        "virtualMachines_windowsvm_01_id": {
            "defaultValue": "/subscriptions/979226a0-fd4a-4f1b-9bc5-46d431e71647/resourceGroups/inacap-rg01/providers/Microsoft.Compute/disks/windowsvm-01_OsDisk_1_777080ea18914e96b1c5a5b2d28ef90e",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/979226a0-fd4a-4f1b-9bc5-46d431e71647/resourceGroups/inacap-rg01/providers/Microsoft.Compute/virtualMachines/kalivm-01'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_kalivm_01_name')]",
            "apiVersion": "2018-06-01",
            "location": "brazilsouth",
            "plan": {
                "name": "kali",
                "product": "kali-linux",
                "publisher": "kali-linux"
            },
            "tags": {},
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_D2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "kali-linux",
                        "offer": "kali-linux",
                        "sku": "kali",
                        "version": "2018.4.0"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(parameters('virtualMachines_kalivm_01_name'),'_OsDisk_1_2fd0c4369fff43af90432ad3bd19136f')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                          "storageAccountType": "Standard_LRS"
                        },
                        "diskSizeGB": 30
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_kalivm_01_name')]",
                    "adminUsername": "benjadiaz",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false,
                        "provisionVMAgent": true
                    },
                    "secrets": [],
                    "allowExtensionOperations": true
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_kalivm_01321_name'))]"
                        }
                    ]
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_kalivm_01321_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/979226a0-fd4a-4f1b-9bc5-46d431e71647/resourceGroups/inacap-rg01/providers/Microsoft.Compute/virtualMachines/ubuntuvm-01'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_ubuntuvm_01_name')]",
            "apiVersion": "2018-06-01",
            "location": "brazilsouth",
            "tags": {},
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_D2s_v3"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "16.04-LTS",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Linux",
                        "name": "[concat(parameters('virtualMachines_ubuntuvm_01_name'),'_OsDisk_1_a34c6adb17ce48248649e91cfcddb7d5')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                    "managedDisk": {
                      "storageAccountType": "Standard_LRS"
                    },
                        "diskSizeGB": 30
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_ubuntuvm_01_name')]",
                    "adminUsername": "benjadiaz",
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": false,
                        "provisionVMAgent": true
                    },
                    "secrets": [],
                    "allowExtensionOperations": true
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_ubuntuvm_01480_name'))]"
                        }
                    ]
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_ubuntuvm_01480_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/979226a0-fd4a-4f1b-9bc5-46d431e71647/resourceGroups/inacap-rg01/providers/Microsoft.Compute/virtualMachines/windowsvm-01'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_windowsvm_01_name')]",
            "apiVersion": "2018-06-01",
            "location": "brazilsouth",
            "tags": {},
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_DS2_v2"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsDesktop",
                        "offer": "Windows-10",
                        "sku": "RS3-Pro",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Windows",
                        "name": "[concat(parameters('virtualMachines_windowsvm_01_name'),'_OsDisk_1_777080ea18914e96b1c5a5b2d28ef90e')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                    "managedDisk": {
                      "storageAccountType": "Standard_LRS"
                    },
                        "diskSizeGB": 127
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_windowsvm_01_name')]",
                    "adminUsername": "benjadiaz",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true
                    },
                    "secrets": [],
                    "allowExtensionOperations": true
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_windowsvm_01937_name'))]"
                        }
                    ]
                },
                "licenseType": "Windows_Client"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_windowsvm_01937_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/979226a0-fd4a-4f1b-9bc5-46d431e71647/resourceGroups/inacap-rg01/providers/Microsoft.Network/networkInterfaces/kalivm-01321'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_kalivm_01321_name')]",
            "apiVersion": "2018-08-01",
            "location": "brazilsouth",
            "tags": {},
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "9e76ec37-63ab-4e32-9975-c3fb5399ceeb",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"bb157604-a3fb-40c8-aedc-42296da01f8e\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.1.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_kalivm_01_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_inacap_rg01_vnet_name'), parameters('subnets_default_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "h0ivnwhdo0qepgwjmg0fi3euhf.nx.internal.cloudapp.net"
                },
                "macAddress": "00-0D-3A-C0-5C-A2",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_kalivm_01_nsg_name'))]"
                },
                "primary": true,
                "tapConfigurations": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_kalivm_01_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_inacap_rg01_vnet_name'), parameters('subnets_default_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_kalivm_01_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/979226a0-fd4a-4f1b-9bc5-46d431e71647/resourceGroups/inacap-rg01/providers/Microsoft.Network/networkInterfaces/ubuntuvm-01480'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_ubuntuvm_01480_name')]",
            "apiVersion": "2018-08-01",
            "location": "brazilsouth",
            "tags": {},
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "7ca82c0b-f164-4148-91c9-aa3daafd3194",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"a856e653-c02e-4d8a-84f3-9128531e63f2\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.1.6",
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_ubuntuvm_01_ip_name'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_inacap_rg01_vnet_name'), parameters('subnets_default_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "h0ivnwhdo0qepgwjmg0fi3euhf.nx.internal.cloudapp.net"
                },
                "macAddress": "00-0D-3A-C0-83-6F",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_ubuntuvm_01_nsg_name'))]"
                },
                "primary": true,
                "tapConfigurations": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_ubuntuvm_01_ip_name'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_inacap_rg01_vnet_name'), parameters('subnets_default_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_ubuntuvm_01_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/979226a0-fd4a-4f1b-9bc5-46d431e71647/resourceGroups/inacap-rg01/providers/Microsoft.Network/networkInterfaces/windowsvm-01937'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_windowsvm_01937_name')]",
            "apiVersion": "2018-08-01",
            "location": "brazilsouth",
            "tags": {},
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "f6bf0c12-6392-4b63-ae63-7bf0b7c35950",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"afcb47b3-70d7-4934-9ff5-bb452edb757b\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.0.1.5",
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_inacap_rg01_vnet_name'), parameters('subnets_default_name'))]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "h0ivnwhdo0qepgwjmg0fi3euhf.nx.internal.cloudapp.net"
                },
                "macAddress": "00-0D-3A-C0-7B-FC",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_windowsvm_01_nsg_name'))]"
                },
                "primary": true,
                "tapConfigurations": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_inacap_rg01_vnet_name'), parameters('subnets_default_name'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_windowsvm_01_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/979226a0-fd4a-4f1b-9bc5-46d431e71647/resourceGroups/inacap-rg01/providers/Microsoft.Network/networkSecurityGroups/kalivm-01-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_kalivm_01_nsg_name')]",
            "apiVersion": "2018-08-01",
            "location": "brazilsouth",
            "tags": {},
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "8f31e0d7-a024-483a-9470-ec80e1e983af",
                "securityRules": [
                    {
                        "name": "SSH",
                        "etag": "W/\"fe0e72ae-5e84-477f-aee4-3103d8f611f4\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "RDP",
                        "etag": "W/\"fe0e72ae-5e84-477f-aee4-3103d8f611f4\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 320,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"fe0e72ae-5e84-477f-aee4-3103d8f611f4\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"fe0e72ae-5e84-477f-aee4-3103d8f611f4\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"fe0e72ae-5e84-477f-aee4-3103d8f611f4\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"fe0e72ae-5e84-477f-aee4-3103d8f611f4\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"fe0e72ae-5e84-477f-aee4-3103d8f611f4\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"fe0e72ae-5e84-477f-aee4-3103d8f611f4\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/979226a0-fd4a-4f1b-9bc5-46d431e71647/resourceGroups/inacap-rg01/providers/Microsoft.Network/networkSecurityGroups/ubuntuvm-01-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_ubuntuvm_01_nsg_name')]",
            "apiVersion": "2018-08-01",
            "location": "brazilsouth",
            "tags": {},
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "f3033274-c32a-4356-a9df-041e52adbd03",
                "securityRules": [
                    {
                        "name": "SSH",
                        "etag": "W/\"d999566c-17f2-45a2-bfb0-26fa90ba9166\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"d999566c-17f2-45a2-bfb0-26fa90ba9166\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"d999566c-17f2-45a2-bfb0-26fa90ba9166\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"d999566c-17f2-45a2-bfb0-26fa90ba9166\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"d999566c-17f2-45a2-bfb0-26fa90ba9166\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"d999566c-17f2-45a2-bfb0-26fa90ba9166\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"d999566c-17f2-45a2-bfb0-26fa90ba9166\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/979226a0-fd4a-4f1b-9bc5-46d431e71647/resourceGroups/inacap-rg01/providers/Microsoft.Network/networkSecurityGroups/windowsvm-01-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_windowsvm_01_nsg_name')]",
            "apiVersion": "2018-08-01",
            "location": "brazilsouth",
            "tags": {},
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "4515211a-18b3-4c92-a09b-9eedd692cd5f",
                "securityRules": [
                    {
                        "name": "RDP",
                        "etag": "W/\"0870924d-f422-4115-8297-d6e506224146\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"0870924d-f422-4115-8297-d6e506224146\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"0870924d-f422-4115-8297-d6e506224146\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"0870924d-f422-4115-8297-d6e506224146\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"0870924d-f422-4115-8297-d6e506224146\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"0870924d-f422-4115-8297-d6e506224146\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"0870924d-f422-4115-8297-d6e506224146\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/979226a0-fd4a-4f1b-9bc5-46d431e71647/resourceGroups/inacap-rg01/providers/Microsoft.Network/publicIPAddresses/kalivm-01-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[parameters('publicIPAddresses_kalivm_01_ip_name')]",
            "apiVersion": "2018-08-01",
            "location": "brazilsouth",
            "tags": {},
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "b451c44e-73d6-44cf-9192-d79aa2ded4c9",
                "ipAddress": "191.232.197.65",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/979226a0-fd4a-4f1b-9bc5-46d431e71647/resourceGroups/inacap-rg01/providers/Microsoft.Network/publicIPAddresses/ubuntuvm-01-ip'.",
            "type": "Microsoft.Network/publicIPAddresses",
            "sku": {
                "name": "Basic",
                "tier": "Regional"
            },
            "name": "[parameters('publicIPAddresses_ubuntuvm_01_ip_name')]",
            "apiVersion": "2018-08-01",
            "location": "brazilsouth",
            "tags": {},
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "ac475bef-3089-4b8e-babc-0f3eb304cbe1",
                "ipAddress": "191.232.197.116",
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "ipTags": []
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/979226a0-fd4a-4f1b-9bc5-46d431e71647/resourceGroups/inacap-rg01/providers/Microsoft.Network/virtualNetworks/inacap-rg01-vnet'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_inacap_rg01_vnet_name')]",
            "apiVersion": "2018-08-01",
            "location": "brazilsouth",
            "tags": {},
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "d856913e-76e3-47a0-9ac9-61b45474943d",
                "addressSpace": {
                    "addressPrefixes": [
                        "10.0.1.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "etag": "W/\"6b5a8606-9c06-4e56-934a-64273d71a395\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "addressPrefix": "10.0.1.0/24",
                            "delegations": []
                        }
                    }
                ],
                "virtualNetworkPeerings": [],
                "enableDdosProtection": false,
                "enableVmProtection": false
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/979226a0-fd4a-4f1b-9bc5-46d431e71647/resourceGroups/inacap-rg01/providers/Microsoft.Network/networkSecurityGroups/kalivm-01-nsg/securityRules/SSH'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_kalivm_01_nsg_name'), '/', parameters('securityRules_SSH_name'))]",
            "apiVersion": "2018-08-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 300,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_kalivm_01_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/979226a0-fd4a-4f1b-9bc5-46d431e71647/resourceGroups/inacap-rg01/providers/Microsoft.Network/networkSecurityGroups/kalivm-01-nsg/securityRules/RDP'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_kalivm_01_nsg_name'), '/', parameters('securityRules_RDP_name'))]",
            "apiVersion": "2018-08-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 320,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_kalivm_01_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/979226a0-fd4a-4f1b-9bc5-46d431e71647/resourceGroups/inacap-rg01/providers/Microsoft.Network/networkSecurityGroups/ubuntuvm-01-nsg/securityRules/SSH'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_ubuntuvm_01_nsg_name'), '/', parameters('securityRules_SSH_name_1'))]",
            "apiVersion": "2018-08-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "22",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 300,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_ubuntuvm_01_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/979226a0-fd4a-4f1b-9bc5-46d431e71647/resourceGroups/inacap-rg01/providers/Microsoft.Network/networkSecurityGroups/windowsvm-01-nsg/securityRules/RDP'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_windowsvm_01_nsg_name'), '/', parameters('securityRules_RDP_name_1'))]",
            "apiVersion": "2018-08-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 300,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_windowsvm_01_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/979226a0-fd4a-4f1b-9bc5-46d431e71647/resourceGroups/inacap-rg01/providers/Microsoft.Network/virtualNetworks/inacap-rg01-vnet/subnets/default'.",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "name": "[concat(parameters('virtualNetworks_inacap_rg01_vnet_name'), '/', parameters('subnets_default_name'))]",
            "apiVersion": "2018-08-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "addressPrefix": "10.0.1.0/24",
                "delegations": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_inacap_rg01_vnet_name'))]"
            ]
        }
    ]
}
